--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>MMTTSS</title>
+    <title>MMTTSS</title> 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156162365-1"></script>
@@ -84,7 +84,7 @@
             <hr>
             <div class='row text-center'>
                 <div class='col'>
-                    <p class='h2 font-weight-bold '>MAILABS style-references</p>
+                    <p class='h2 font-weight-bold '>Multi-lingual Multi-speaker Multi-style TTS Synthesis Examples</p>
                 </div>
             </div>
 
