--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <hr>
             <div class='row text-center'>
                 <div class='col'>
-                    <p class='h2 font-weight-bold '>VCTK style-references</p>
+                    <p class='h2 font-weight-bold '>Korean-speaker English-text</p>
                 </div>
             </div>
 
