--- a/index.html
+++ b/index.html
@@ -84,17 +84,17 @@
             <hr>
             <div class='row text-center'>
                 <div class='col'>
-                    <p class='h2 font-weight-bold '>Multi-lingual Multi-speaker Multi-style TTS Synthesis Examples</p>
+                    <p class='h2 font-weight-bold '>English-speaker Korean-text Examples</p>
                 </div>
             </div>
 
             <div class='row' style='margin-top: 40px; margin-bottom: 10px;'>
-                <p class='h4'>English-speaker Korean-text</p>
+                <p class='h4'>은영이 일이 있고나서 이제 내 인생이 밑바닥까지 왔다고 생각했어요.</p>
             </div>
 
             <div style='display: flex; align-content: center; '>
                 <div style='flex: 1;  '>
-                    <div class='row' style='width: 380px; height:50px; '>
+                    <div class='column' style='width: 380px; height:50px; '>
                         <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Reference</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
