--- a/index.html
+++ b/index.html
@@ -145,9 +145,10 @@
                         </div>
                     </div>
                 </div>
-		
+	    </div>
+		    
+            <div style='display: flex; align-content: center; '>
 		<div style='flex: 1;  '>
-                    
 		    <div class='row' style='width: 380px; height:50px; '>
                         <div style='height: 60px;'>
                             <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Reference</p>
