--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
 	    </div>
 		    
-            <div style='display: flex; align-content: center; '>
+            <div style='display: flex; align-content: center; row;'>
                 <div style='flex: 0;  '>
                     <div class='row' style='width: 380px; height:50px; '>
                         <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>w/o Dis</p>
