--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                 </div>
 	    </div>
 		    
-            <div style='display: flex; align-content: center;'>
-                <div style='flex: 1; flex-direction: row;'>
+            <div style='display: flex; flex-direction: row; align-content: center;'>
+                <div style='flex: 1;'>
                     <div class='row' style='width: 380px; height:50px; '>
                         <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>w/o Dis</p>
                         <div style='height: 60px; vertical-align: middle'>
