--- a/index.html
+++ b/index.html
@@ -95,6 +95,17 @@
             <div style='display: flex; align-content: center; '>
                 <div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Speaker</p>
+                        <div style='height: 60px; vertical-align: middle'>
+                            <audio controls controlsList="nodownload"
+                                style='display: inline-block; padding:8px; width: 270px; height: 50px'>
+                                <source src="./assets/spk/p267_004.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
+                            </audio>
+                        </div>
+                    </div>
+                </div>
+		<div style='flex: 1;  '>
+                    <div class='row' style='width: 380px; height:50px; '>
                         <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Reference</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
