--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
 		<div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Reference</p>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Reference Style</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 270px; height: 50px'>
@@ -118,7 +118,7 @@
 	    </div>
 		    
             <div style='display: flex; align-content: center;'>
-                <div style='flex;'>
+                <div style='flex: 1;'>
                     <div class='row' style='width: 380px; height:50px; '>
                         <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>w/o Dis</p>
                         <div style='height: 60px; vertical-align: middle'>
@@ -128,6 +128,8 @@
                             </audio>
                         </div>
                     </div>
+                </div>
+		<div style='flex: 1;'>
 		    <div class='row' style='width: 380px; height:50px; '>
                         <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>GRL</p>
                         <div style='height: 60px; vertical-align: middle'>
@@ -137,6 +139,8 @@
                             </audio>
                         </div>
                     </div>
+                </div>
+		<div style='flex: 1;'>
 		    <div class='row' style='width: 380px; height:50px; '>
                         <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>MI</p>
                         <div style='height: 60px; vertical-align: middle'>
@@ -146,6 +150,8 @@
                             </audio>
                         </div>
                     </div>
+                </div>
+		<div style='flex: 1;'>
                     <div class='row' style='width: 380px; height:50px; '>
                         <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>TC</p>
                         <div style='height: 60px; vertical-align: middle'>
