--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
-                                <source src="./assets/TC/spk061_ref033_txt003.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
+                                <source src="./assets/TC/spk088_ref043_txt020.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
                             </audio>
                         </div>
                     </div>
@@ -323,7 +323,7 @@
                 </div>
             </div>
 	    <div class='row' style='margin-top: 40px; margin-bottom: 10px;'>
-                <p class='h4'>앞으로 너 이 판에서 다시 내 눈에 띄면 그땐 너 죽는다.</p>
+                <p class='h4'>He told us about it the next day.</p>
             </div>
             <div style='display: flex; align-content: center; '>
                 <div style='flex: 1;  '>
