--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 </div>
 		<div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Reference Style</p>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Style</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 270px; height: 50px'>
@@ -139,6 +139,8 @@
                         </div>
                     </div>
                 </div>
+	    </div>
+            <div style='display: flex; align-content: center;'>
 		<div style='flex: 1;'>
 		    <div class='row' style='width: 380px; height:50px; '>
                         <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>MI</p>
@@ -188,7 +190,7 @@
                 </div>
 		<div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Reference Style</p>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Style</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 270px; height: 50px'>
@@ -222,6 +224,8 @@
                         </div>
                     </div>
                 </div>
+	    </div>
+            <div style='display: flex; align-content: center;'>
 		<div style='flex: 1;'>
 		    <div class='row' style='width: 380px; height:50px; '>
                         <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>MI</p>
@@ -271,7 +275,7 @@
                 </div>
 		<div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Reference Style</p>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Style</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 270px; height: 50px'>
@@ -305,6 +309,8 @@
                         </div>
                     </div>
                 </div>
+	    </div>
+            <div style='display: flex; align-content: center;'>
 		<div style='flex: 1;'>
 		    <div class='row' style='width: 380px; height:50px; '>
                         <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>MI</p>
@@ -347,7 +353,7 @@
                 </div>
 		<div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Reference Style</p>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Style</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 270px; height: 50px'>
@@ -381,6 +387,8 @@
                         </div>
                     </div>
                 </div>
+	    </div>
+            <div style='display: flex; align-content: center;'>
 		<div style='flex: 1;'>
 		    <div class='row' style='width: 380px; height:50px; '>
                         <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>MI</p>
@@ -422,7 +430,7 @@
                 </div>
 		<div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Reference Style</p>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Style</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 270px; height: 50px'>
@@ -456,6 +464,8 @@
                         </div>
                     </div>
                 </div>
+	    </div>
+            <div style='display: flex; align-content: center;'>
 		<div style='flex: 1;'>
 		    <div class='row' style='width: 380px; height:50px; '>
                         <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>MI</p>
