--- a/index.html
+++ b/index.html
@@ -89,9 +89,14 @@
                 </div>
             </div>
 	    <div class='row' style='margin-top: 40px; margin-bottom: 10px;'>
-                <p class='h4'>He told us about it the next day.</p>
+                <p class='h4'>Input/Condition</p>
             </div>
             <div style='display: flex; align-content: center; '>
+                <div style='flex: 1;  '>
+                    <div class='row' style='width: 380px; height:50px; '>
+                        <p style='height: 60px; width: 500px; padding: 15px 0; text-align: right;'>He told us about it the next day.</p>
+                    </div>
+                </div>
                 <div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
                         <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Speaker</p>
@@ -116,6 +121,9 @@
                 </div>
 	    </div>
 		    
+	    <div class='row' style='margin-top: 40px; margin-bottom: 10px;'>
+                <p class='h4'>Synthesized samples</p>
+            </div>
             <div style='display: flex; align-content: center;'>
                 <div style='flex: 1;'>
                     <div class='row' style='width: 380px; height:50px; '>
