--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
             <div style='display: flex; align-content: center; '>
                 <div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 500px; padding: 15px 0; text-align: right;'>He told us about it the next day.</p>
+                        <p style='height: 60px; width: 500px; padding: 15px 0; text-align: right;'>Text: He told us about it the next day.</p>
                     </div>
                 </div>
                 <div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Speaker</p>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Speaker:</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 270px; height: 50px'>
@@ -110,7 +110,7 @@
                 </div>
 		<div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Style</p>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Style:</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 270px; height: 50px'>
