--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 	    <div class='row' style='margin-top: 40px; margin-bottom: 10px;'>
                 <p class='h4'>Input/Condition</p>
             </div>
-            <div style='display: flex; align-content: left; '>
+            <div style='display: flex; align-content: center; '>
                 <div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 500px; padding: 15px 0; text-align: right;'>Text: He told us about it the next day.</p>
+                        <p style='height: 60px; width: 500px; padding: 15px 0; text-align: left;'>Text: He told us about it the next day.</p>
                     </div>
                 </div>
                 <div style='flex: 1;  '>
