--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div style='display: flex; align-content: center; '>
                 <div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 500px; padding: 15px 0; text-align: center;'>Text: He told us about it the next day.</p>
+                        <p style='height: 60px; width: 380px; padding: 15px 0; text-align: center;'>Text: He told us about it the next day.</p>
                     </div>
                 </div>
                 <div style='flex: 1;  '>
@@ -187,7 +187,7 @@
             <div style='display: flex; align-content: center; '>
                 <div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 500px; padding: 15px 0; text-align: center;'>Text: You should be there with six different characters.</p>
+                        <p style='height: 60px; width: 380px; padding: 15px 0; text-align: center;'>Text: You should be there with six different characters.</p>
                     </div>
                 </div>
                 <div style='flex: 1;  '>
@@ -280,12 +280,12 @@
             <div style='display: flex; align-content: center; '>
                 <div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 500px; padding: 15px 0; text-align: center;'>Text: 은영이 일이 있고나서 이제 내 인생이 밑바닥까지 왔다고 생각했어요.</p>
+                        <p style='height: 60px; width: 380px; padding: 15px 0; text-align: center;'>Text: 은영이 일이 있고나서 이제 내 인생이 밑바닥까지 왔다고 생각했어요.</p>
                     </div>
                 </div>
                 <div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Speaker</p>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Speaker:</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 270px; height: 50px'>
@@ -296,7 +296,7 @@
                 </div>
 		<div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Style</p>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Style:</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 270px; height: 50px'>
@@ -366,12 +366,12 @@
             <div style='display: flex; align-content: center; '>
                 <div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 500px; padding: 15px 0; text-align: center;'>Text: 하지만 죽은 택시기사나 그 여자처럼 되지 않으려면 방법은 한 가지뿐이에요.</p>
+                        <p style='height: 60px; width: 380px; padding: 15px 0; text-align: center;'>Text: 하지만 죽은 택시기사나 그 여자처럼 되지 않으려면 방법은 한 가지뿐이에요.</p>
                     </div>
                 </div>
                 <div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Speaker</p>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Speaker:</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 270px; height: 50px'>
@@ -382,7 +382,7 @@
                 </div>
 		<div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Style</p>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Style:</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 270px; height: 50px'>
@@ -451,12 +451,12 @@
             <div style='display: flex; align-content: center; '>
                 <div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 500px; padding: 15px 0; text-align: center;'>Text: 앞으로 너 이 판에서 다시 내 눈에 띄면 그땐 너 죽는다.</p>
+                        <p style='height: 60px; width: 380px; padding: 15px 0; text-align: center;'>Text: 앞으로 너 이 판에서 다시 내 눈에 띄면 그땐 너 죽는다.</p>
                     </div>
                 </div>
                 <div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Speaker</p>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Speaker:</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 270px; height: 50px'>
@@ -467,7 +467,7 @@
                 </div>
 		<div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Style</p>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Style:</p>
                         <div style='height: 60px; vertical-align: middle'>
                             <audio controls controlsList="nodownload"
                                 style='display: inline-block; padding:8px; width: 270px; height: 50px'>
