--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             </div>
         </div>
     </div>
-    <div class="container" style="max-width:1100px;" align-items:"center;">
+    <div class="container" style="max-width:1200px">
         <!-- authors -->
-        <div class='row text-center h5 font-weight-normal pl-0 pr-0 mb-4' style="font-style:italic">
+        <div class='row text-center h5 font-weight-normal pl-5 pr-5 mb-5' style="font-style:italic">
 		<a class="col-md-2 col-xs-4 text-dark" ><span>Sung Jun Cheon</span></a>
                 <a class="col-md-2 col-xs-4 text-dark" ><span>Byoung Jin Choi</span></a>
                 <a class="col-md-2 col-xs-4 text-dark" ><span>Minchan Kim</span></a>
