--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <div style='display: flex; align-content: center; '>
                 <div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 380px; padding: 15px 0; text-align: center;'>Text: He told us about it the next day.</p>
+                        <p style='height: 60px; width: 380px; padding: 15px 0; text-align: center;'>Text: And instead of merely struggling with Nature for it, they also fight other ants.</p>
                     </div>
                 </div>
                 <div style='flex: 1;  '>
@@ -264,7 +264,7 @@
             <div style='display: flex; align-content: center; '>
                 <div style='flex: 1;  '>
                     <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 380px; padding: 15px 0; text-align: center;'>Text: He told us about it the next day.</p>
+                        <p style='height: 60px; width: 380px; padding: 15px 0; text-align: center;'>Text: We do need a new one.</p>
                     </div>
                 </div>
                 <div style='flex: 1;  '>
