--- a/index.html
+++ b/index.html
@@ -173,6 +173,100 @@
                 </div>
 	    </div>
 		
+		
+		
+            <hr>
+            <div class='row text-center'>
+                <div class='col'>
+                    <p class='h2 font-weight-bold '>English-text Korean-speaker Example</p>
+                </div>
+            </div>
+		
+	    <div class='row' style='margin-top: 40px; margin-bottom: 10px;'>
+                <p class='h4'>Input/Condition 1</p>
+            </div>
+            <div style='display: flex; align-content: center; '>
+                <div style='flex: 1;  '>
+                    <div class='row' style='width: 380px; height:50px; '>
+                        <p style='height: 60px; width: 380px; padding: 15px 0; text-align: center;'>Text: You should be there with six different characters.</p>
+                    </div>
+                </div>
+                <div style='flex: 1;  '>
+                    <div class='row' style='width: 380px; height:50px; '>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Speaker:</p>
+                        <div style='height: 60px; vertical-align: middle'>
+                            <audio controls controlsList="nodownload"
+                                style='display: inline-block; padding:8px; width: 270px; height: 50px'>
+                                <source src="./assets/spk/FPJE0_000006.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
+                            </audio>
+                        </div>
+                    </div>
+                </div>
+		<div style='flex: 1;  '>
+                    <div class='row' style='width: 380px; height:50px; '>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Style:</p>
+                        <div style='height: 60px; vertical-align: middle'>
+                            <audio controls controlsList="nodownload"
+                                style='display: inline-block; padding:8px; width: 270px; height: 50px'>
+                                <source src="./assets/ref/ref28.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
+                            </audio>
+                        </div>
+                    </div>
+                </div>
+	    </div>
+		    
+	    <div class='row' style='margin-top: 40px; margin-bottom: 10px;'>
+                <p class='h4'>Synthesized samples 1</p>
+            </div>
+            <div style='display: flex; align-content: center;'>
+                <div style='flex: 1;'>
+                    <div class='row' style='width: 380px; height:50px; '>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>w/o Dis</p>
+                        <div style='height: 60px; vertical-align: middle'>
+                            <audio controls controlsList="nodownload"
+                                style='display: inline-block; padding:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
+                                <source src="./assets/woDis/spk106_ref028_txt004.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
+                            </audio>
+                        </div>
+                    </div>
+                </div>
+		<div style='flex: 1;'>
+		    <div class='row' style='width: 380px; height:50px; '>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>GRL</p>
+                        <div style='height: 60px; vertical-align: middle'>
+                            <audio controls controlsList="nodownload"
+                                style='display: inline-block; padding:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
+                                <source src="./assets/GRL/spk106_ref028_txt004.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
+                            </audio>
+                        </div>
+                    </div>
+                </div>
+	    </div>
+            <div style='display: flex; align-content: center;'>
+		<div style='flex: 1;'>
+		    <div class='row' style='width: 380px; height:50px; '>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>MI</p>
+                        <div style='height: 60px; vertical-align: middle'>
+                            <audio controls controlsList="nodownload"
+                                style='display: inline-block; padding:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
+                                <source src="./assets/MI/spk106_ref028_txt004.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
+                            </audio>
+                        </div>
+                    </div>
+                </div>
+		<div style='flex: 1;'>
+                    <div class='row' style='width: 380px; height:50px; '>
+                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>TC</p>
+                        <div style='height: 60px; vertical-align: middle'>
+                            <audio controls controlsList="nodownload"
+                                style='display: inline-block; padding:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
+                                <source src="./assets/TC/spk106_ref028_txt004.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
+                            </audio>
+                        </div>
+                    </div>
+                </div>
+	    </div>	
+		
 	    <div class='row' style='margin-top: 40px; margin-bottom: 10px;'>
                 <p class='h4'>Input/Condition 2</p>
             </div>
@@ -342,99 +436,6 @@
                     </div>
                 </div>
 	    </div>
-		
-		
-            <hr>
-            <div class='row text-center'>
-                <div class='col'>
-                    <p class='h2 font-weight-bold '>English-text Korean-speaker Example</p>
-                </div>
-            </div>
-		
-	    <div class='row' style='margin-top: 40px; margin-bottom: 10px;'>
-                <p class='h4'>Input/Condition</p>
-            </div>
-            <div style='display: flex; align-content: center; '>
-                <div style='flex: 1;  '>
-                    <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 380px; padding: 15px 0; text-align: center;'>Text: You should be there with six different characters.</p>
-                    </div>
-                </div>
-                <div style='flex: 1;  '>
-                    <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Speaker:</p>
-                        <div style='height: 60px; vertical-align: middle'>
-                            <audio controls controlsList="nodownload"
-                                style='display: inline-block; padding:8px; width: 270px; height: 50px'>
-                                <source src="./assets/spk/FPJE0_000006.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
-                            </audio>
-                        </div>
-                    </div>
-                </div>
-		<div style='flex: 1;  '>
-                    <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>Style:</p>
-                        <div style='height: 60px; vertical-align: middle'>
-                            <audio controls controlsList="nodownload"
-                                style='display: inline-block; padding:8px; width: 270px; height: 50px'>
-                                <source src="./assets/ref/ref28.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
-                            </audio>
-                        </div>
-                    </div>
-                </div>
-	    </div>
-		    
-	    <div class='row' style='margin-top: 40px; margin-bottom: 10px;'>
-                <p class='h4'>Synthesized samples</p>
-            </div>
-            <div style='display: flex; align-content: center;'>
-                <div style='flex: 1;'>
-                    <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>w/o Dis</p>
-                        <div style='height: 60px; vertical-align: middle'>
-                            <audio controls controlsList="nodownload"
-                                style='display: inline-block; padding:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
-                                <source src="./assets/woDis/spk106_ref028_txt004.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
-                            </audio>
-                        </div>
-                    </div>
-                </div>
-		<div style='flex: 1;'>
-		    <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>GRL</p>
-                        <div style='height: 60px; vertical-align: middle'>
-                            <audio controls controlsList="nodownload"
-                                style='display: inline-block; padding:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
-                                <source src="./assets/GRL/spk106_ref028_txt004.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
-                            </audio>
-                        </div>
-                    </div>
-                </div>
-	    </div>
-            <div style='display: flex; align-content: center;'>
-		<div style='flex: 1;'>
-		    <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>MI</p>
-                        <div style='height: 60px; vertical-align: middle'>
-                            <audio controls controlsList="nodownload"
-                                style='display: inline-block; padding:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
-                                <source src="./assets/MI/spk106_ref028_txt004.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
-                            </audio>
-                        </div>
-                    </div>
-                </div>
-		<div style='flex: 1;'>
-                    <div class='row' style='width: 380px; height:50px; '>
-                        <p style='height: 60px; width: 100px; padding: 15px 0; text-align: right;'>TC</p>
-                        <div style='height: 60px; vertical-align: middle'>
-                            <audio controls controlsList="nodownload"
-                                style='display: inline-block; padding:8px; width: 270px; height: 50px; width: 270px; height: 50px'>
-                                <source src="./assets/TC/spk106_ref028_txt004.wav" class="img-fluid rounded mx-auto d-block" alt="temp">
-                            </audio>
-                        </div>
-                    </div>
-                </div>
-	    </div>	
 	
             <hr>
             <div class='row text-center'>
