--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <hr>
             <div class='row text-center'>
                 <div class='col'>
-                    <p class='h2 font-weight-bold '>English-text Korean-speaker Example</p>
+                    <p class='h2 font-weight-bold '>English-text Korean-speaker Examples</p>
                 </div>
             </div>
 		
