--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
                 </div>
             </div>
 	    <div class='row' style='margin-top: 40px; margin-bottom: 10px;'>
-                <p class='h4'>Input/Condition 1</p>
+                <p class='h4'>Input/Condition</p>
             </div>
             <div style='display: flex; align-content: center; '>
                 <div style='flex: 1;  '>
@@ -650,7 +650,7 @@
 	    </div>
 		    
 	    <div class='row' style='margin-top: 40px; margin-bottom: 10px;'>
-                <p class='h4'>Synthesized samples 1</p>
+                <p class='h4'>Synthesized samples</p>
             </div>
             <div style='display: flex; align-content: center;'>
                 <div style='flex: 1;'>
